fixed the appearance, added align items to center

--- a/jez.css
+++ b/jez.css
@@ -89,7 +89,7 @@ a{
     }
     .placeholder{
         position: relative;
-    }
+        align-items: center;
     }
     .touristImage{
         display: flex;
@@ -124,4 +124,5 @@ a{
         border-radius: 6px;
         position: relative;
         top: -1.2em;
+    }
 }
